--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,6 @@
             <ul>
                 <li><a href="review.html">Reviews</a></li>
                 <li><a href="rooms.html">Rooms</a></li>
-                <li><a href=""></a></li>
                 <li><a href="contacts.html">Contact</a></li>
             </ul>
         </nav>
@@ -30,45 +29,123 @@
   <img class="slide" src="https://lh3.googleusercontent.com/p/AF1QipNfAbV3K9cV6VBLkskZilhIYhgJwTOw8Ewpw2rz=s680-w680-h510" alt="Image 3">
 </div>
 <script src="script.js"></script>
-</body>
-</html>
-<h3>Our service</h3>
-<li>Event planner</li>
-<li>Hall Decoration</li>
-<li>Grace hall: Conferences and Events</li>
-<li>Accomodation</li>
-<li>Indoor and Outdoor Catering</li>
-<li>Cocktails</li>
-    <section id="home">
-        <h2>Experience Luxury at Peak Olam Suites</h2>
-        <p>Discover a new level of comfort and elegance at our hotel.</p>
-        <img src="https://images.trvl-media.com/lodging/36000000/35200000/35195000/35194966/b6bd100f.jpg?impolicy=resizecrop&rw=1200&ra=fit">
-        <p><img src="https://images.trvl-media.com/lodging/36000000/35200000/35195000/35194966/33d67f41.jpg?impolicy=resizecrop&rw=1200&ra=fit"></p>
-        <p><h3><b>Lobby</b></h3></p>
-    </section>
 
-    <section id="rooms">
+
+<center> <h1>Our service</h1> </center>
+
+
+
+<div class="services-container">
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Event Planner Icon">
+        <h3>Event Planner</h3>
+        <p></p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Hall Decoration Icon">
+        <h3>Hall Decoration</h3>
+        <p></p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Grace Hall Icon">
+        <h3>Grace Hall: Conferences and Events</h3>
+        <p></p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Accommodation Icon">
+        <h3>Accommodation</h3>
+        <p>L</p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Catering Icon">
+        <h3>Indoor and Outdoor Catering</h3>
+        <p></p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Cocktails Icon">
+        <h3>Cocktails</h3>
+        <p></p>
+    </div>
+</div>
+
+
+<section id="home" class="flex-container">
+    <div class="flex-item">
+        <div class="text-content">
+            <h2>Experience Luxury at Peak Olam Suites</h2>
+            <p>Discover a new level of comfort and elegance at our hotel.</p>
+        </div>
+        <img src="https://images.trvl-media.com/lodging/36000000/35200000/35195000/35194966/b6bd100f.jpg?impolicy=resizecrop&rw=1200&ra=fit" alt="Lobby Image">
+    </div>
+</section>
+
+<section id="rooms" class="flex-container">
+    <div class="flex-item">
         <h2>Our Rooms</h2>
-        <p><img src="https://images.trvl-media.com/lodging/36000000/35200000/35195000/35194966/5796e7b1.jpg?impolicy=resizecrop&rw=1200&ra=fit"></p>
-        <p><img src="https://images.trvl-media.com/lodging/36000000/35200000/35195000/35194966/91b2f6f5.jpg?impolicy=resizecrop&rw=1200&ra=fit"></p>
         <p>Choose from a variety of luxurious rooms to suit your needs.</p>
-    </section>
+    </div>
+    <div class="flex-item">
+        <img src="https://images.trvl-media.com/lodging/36000000/35200000/35195000/35194966/5796e7b1.jpg?impolicy=resizecrop&rw=1200&ra=fit" alt="Room Image 1">
+    </div>
+    <div class="flex-item">
+        <img src="https://images.trvl-media.com/lodging/36000000/35200000/35195000/35194966/91b2f6f5.jpg?impolicy=resizecrop&rw=1200&ra=fit" alt="Room Image 2">
+    </div>
+</section>
+
+
+
+
+<center> <h1>Our Ammenities</h1> </center>
+
+
+
+<div class="services-container">
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Event Planner Icon">
+        <h3>Swimming Pool</h3>
+        <p></p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Hall Decoration Icon">
+        <h3>Gym</h3>
+        <p></p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Grace Hall Icon">
+        <h3>Spa</h3>
+        <p></p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Accommodation Icon">
+        <h3>Daily House Keeping</h3>
+        <p></p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Catering Icon">
+        <h3>Breakfast, Launch, Dinner and morw avaiable</h3>
+        <p></p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU" alt="Cocktails Icon">
+        <h3>Room Service</h3>
+        <p>.</p>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU">
+        <h3>Restaurants and Bar/lounge</h3>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU">
+        <h3>24hrs uninterrupted power supply, WiFI connection and in-room climate(Air conditioning)</h3>
+    </div>
+    <div class="service">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh4BxyCTwl7Ua_vdQaPViwTkRYVroCzMoA7A&usqp=CAU">
+        <h3>Cool and Calm environment</h3>
+    </div>
+</div>
+
 
     <section id="amenities">
-        <h2>Our Amenities</h2>
-   <section class="amenities">    
-<ul>
-<li>Swimming Pool</li>
-<li>Gym</li>
-<li>Spa</li>
-<li>Daily house keeping</li>
-<li>Room service</li>
-<li>Breakfast, Launch, Dinner and more Available</li>
-<li>Restaurants and bar/lounge</li>
-<li>24hrs power supply, WIFI connection and In-room climate(Air condtioning)</li>
-<li>Cool and calm environment</li>
-</ul>
-</section>
         <p><img src="https://images.trvl-media.com/lodging/36000000/35200000/35195000/35194966/7e202053.jpg?impolicy=resizecrop&rw=1200&ra=fit"></p>
         <p><b>Bar Section</b></p>
         <p><img src="https://images.trvl-media.com/lodging/36000000/35200000/35195000/35194966/44beff1b.jpg?impolicy=resizecrop&rw=1200&ra=fit"></p>
